# cxxgids

./: .gitignore  .gitmodules
gids_module/: CMakeLists.txt  gids_nvme.cu
